--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 
 <!-- Twitter Cards -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:image" content="/images/">
+<meta name="twitter:image" content="http://panks.me/images/">
 <meta name="twitter:title" content="Page Not Found">
 <meta name="twitter:description" content="Page not found. Your pixels are in another canvas.">
 <meta name="twitter:creator" content="@pankajxdx">
@@ -21,15 +21,15 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="Page Not Found">
 <meta property="og:description" content="Page not found. Your pixels are in another canvas.">
-<meta property="og:url" content="/404.html">
+<meta property="og:url" content="http://panks.me/404.html">
 <meta property="og:site_name" content="Code Greenhorn">
 
 
 
 
 
-<link rel="canonical" href="/404.html">
-<link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Code Greenhorn Feed">
+<link rel="canonical" href="http://panks.me/404.html">
+<link href="http://panks.me/feed.xml" type="application/atom+xml" rel="alternate" title="Code Greenhorn Feed">
 <link rel="author" href="http://plus.google.com/u/1/+PankajKumar42?rel=author">
 
 <!-- http://t.co/dKP3o1e -->
@@ -38,28 +38,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="/assets/css/main.min.css">
+<link rel="stylesheet" href="http://panks.me/assets/css/main.min.css">
 <!-- Webfonts -->
 <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
 
 <meta http-equiv="cleartype" content="on">
 
 <!-- Load Modernizr -->
-<script src="/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
+<script src="http://panks.me/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
 
 <!-- Icons -->
 <!-- 16x16 -->
-<link rel="shortcut icon" href="/favicon.ico">
+<link rel="shortcut icon" href="http://panks.me/favicon.ico">
 <!-- 32x32 -->
-<link rel="shortcut icon" href="/favicon.png">
+<link rel="shortcut icon" href="http://panks.me/favicon.png">
 <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
-<link rel="apple-touch-icon-precomposed" href="/images/apple-touch-icon-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="http://panks.me/images/apple-touch-icon-precomposed.png">
 <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/apple-touch-icon-72x72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://panks.me/images/apple-touch-icon-72x72-precomposed.png">
 <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/apple-touch-icon-114x114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://panks.me/images/apple-touch-icon-114x114-precomposed.png">
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/apple-touch-icon-144x144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://panks.me/images/apple-touch-icon-144x144-precomposed.png">
 
 
 
@@ -71,16 +71,16 @@
 <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 	<button class="dl-trigger">Open Menu</button>
 	<ul class="dl-menu">
-		<li><a href="">Home</a></li>
+		<li><a href="http://panks.me">Home</a></li>
 		<li>
 			<a href="#">About</a>
 			<ul class="dl-submenu">
 				<li>
-					<img src="/images/avatar.png" alt="Pankaj Kumar photo" class="author-photo">
+					<img src="http://panks.me/images/avatar.png" alt="Pankaj Kumar photo" class="author-photo">
 					<h4>Pankaj Kumar</h4>
 					<p>A Pluviophile and Brogrammer</p>
 				</li>
-				<li><a href="/about/">More about me</a></li>
+				<li><a href="http://panks.me/about/">More about me</a></li>
 				
 				<li>
 					<a href="http://github.com/panks"><i class="icon-github"></i> GitHub</a>
@@ -106,8 +106,8 @@
 		<li>
 			<a href="#">Posts</a>
 			<ul class="dl-submenu">
-				<li><a href="/posts/">List all posts</a></li>
-				<li><a href="/tags/">Tag list</a></li>
+				<li><a href="http://panks.me/posts/">List all posts</a></li>
+				<li><a href="http://panks.me/tags/">Tag list</a></li>
 			</ul>
 		</li>
 		
@@ -129,7 +129,7 @@
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
-  var GOOG_FIXURL_SITE = ''
+  var GOOG_FIXURL_SITE = 'http://panks.me'
 </script>
 
 <script type="text/javascript" src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
@@ -153,8 +153,8 @@
 </div><!-- /.footer-wrapper -->
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-<script src="/assets/js/scripts.min.js"></script>
+<script>window.jQuery || document.write('<script src="http://panks.me/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+<script src="http://panks.me/assets/js/scripts.min.js"></script>
 
           
 
